@@ -1,4 +1,4 @@
-package com.example.telegrambot.service.command.text;
+package com.example.telegrambot.service.command.photo;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
@@ -6,28 +6,29 @@ import org.springframework.stereotype.Service;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Service // Правильнее же использовать эту аннотацию? У нас же тут бизнес логика!
-public class SelectTextCommand {
-    private final List<SendTextCommand> textCommandList; // Такое название подойдет? Выбрал и того что идея предлагала
+@Service
+public class SelectFileCommand {
+    private final List<SendFileCommand> fileCommandList;
 
     @Autowired
-    public SelectTextCommand(List<SendTextCommand> textCommandList) {
-        this.textCommandList = textCommandList;
+    public SelectFileCommand(List<SendFileCommand> fileCommandList) {
+        this.fileCommandList = fileCommandList;
     }
 
-    public List<SendTextCommand> getCommandByName(String command) {
-
-        return textCommandList.stream()
+    public List<SendFileCommand> getCommandByName(String command) {
+        return fileCommandList.stream()
                 .filter(clazz -> clazz.getClass().isAnnotationPresent(Component.class))
                 .filter(clazz -> clazz.getClass().getAnnotation(Component.class).value().equals(command)) // добавил filter
                 .findFirst()
                 .map(Collections::singletonList)
                 .orElseGet(() ->  // поменял
-                        textCommandList.stream()
+                        fileCommandList.stream()
                                 .filter(clazz -> clazz.getClass().getAnnotation(Component.class)
                                         .value().equals("/incorrect"))
-                                .findFirst().stream().toList()
+                                .findFirst().stream().collect(Collectors.toList())
                 );
     }
 }
+
